2002-12-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03534] cleanup file.c
	* file.c (HTMLlineproc2body): cleanup

2002-12-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: w3m/0.3.2.2+cvs
	* NEWS: 0.3.2.2

2002-12-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* security fix
	* file.c (process_img): html_quote()

2002-12-06  Takahashi Youichirou <nikuq@hk.airnet.ne.jp>

	* [w3m-dev 03530] save history
	* history.c (saveHistory): save tmpfile and rename

2002-12-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: func: ACCESSKEY, LINK_MENU

2002-12-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03529] Support of title, accesskey of anchor
	* anchor.c (putAnchor): arg title, key 
				initialize slave
		(registerHref): arg title, key
		(registerName): title = NULL, key = '\0'
		(registerForm): title = NULL, key = '\0'
		(_put_anchor_news): title = NULL, key = '\0'
		(_put_anchor_all): title = NULL, key = '\0'
		(addMultirowsImg): register title, accesskey
		(addMultirowsForm): title = NULL, key = '\0'
		(getAnchorText): added
	* display.c (displayBuffer): show title if any
	* file.c (set_breakpoint): use bcopy
		(back_to_breakpoint): use bcopy
		(flushline): s/anchor/anchor.url/
			     s/anchor_hseq/anchor.hseq/
			     s/anchor_target/anchor.target/
			     add anchor.*
		(close_effect0): s/anchor/anchor.url/
				s/anchor_hseq/anchor.hseq/
		(close_anchor): use bzero
		(process_img): ATTR_TITLE, 
		(HTMLtagproc1): s/anchor/anchor.url/
				target, referer, title, accesskey, hseq
		(HTMLlineproc2body): ATTR_TITLE, ATTR_ACCESSKEY
		(init_henv): use bzero
	* fm.h (Anchor): add title, accesskey, slave
		(Breakpoint): use Anchor
		(struct readbuffer): use Anchor
	* funcname.tab (ACCESSKEY): added
		(LINK_MENU): added
	* html.c (ALST_A): add ATTR_TITLE, ATTR_ACCESSKEY
		(ALST_IMG): add ATTR_TITLE
		(ALST_IMG_ALT): add ATTR_TITLE
		(AttrMAP): add accesskey, renum
	* html.h (ATTR_ACCESSKEY): added
		(ATTR_*): renum 50->60