@@ -1,5 +1,11 @@
 2002-12-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03535] close anchor, quote <
+	* file.c (HTMLtagproc1): close_anchor
+	* frame.c (createFrameFile): quote <
+
+2002-12-07  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03534] cleanup file.c
 	* file.c (HTMLlineproc2body): cleanup
 
